--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -112,13 +112,12 @@ a:active {
 }
 
 .page-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
   clear: both;
   display: flex;
   flex-direction: column;
   text-align: center;
+  position: absolute;
+  bottom: 0;
 }
 
 .profile {
@@ -270,4 +269,8 @@ a:active {
 
 .about-myself {
   list-style-type: none;
+}
+.experience {
+  margin-left: auto;
+  margin-right: auto;
 }
