--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -14,6 +14,8 @@
   --mostly-yellow: #edc655;
   --light-yellow: #fcffad;
   --mostly-orange: #f76414;
+  --navcolora: #00675c;
+  --navcolorb: #d3d3d3;
 }
 
 /*
@@ -111,6 +113,9 @@ a:active {
 
 .navigation-list__item--active {
   text-decoration: none;
+}
+.navigation-list__item {
+  color: var(--navcolora);
 }
 
 .profile__portrait {
