--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -383,3 +383,9 @@ a:active {
 .seeon {
   color: var(--dark-grey);
 }
+.contactinfo {
+  color: var(--dark-grey);
+}
+.experience{
+  margin: auto;
+}
