--- a/css/style.production.css
+++ b/css/style.production.css
@@ -120,12 +120,14 @@ a:active {
 
 .profile__portrait {
   float: left;
-  width: 200px;
+  width: 250px;
   margin-right: 40px;
   border-radius: 50%;
+  padding-top: 15px;
 }
 
 .page-footer {
+  padding-bottom: 10px;
   clear: both;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -182,7 +184,7 @@ a:active {
 .grid__item {
   display: inline-block;
   width: 33%;
-  padding-left: 70px;
+  padding-left: 15px;
 }
 
 /* end grid fallback */
@@ -368,6 +370,8 @@ a:active {
           flex-grow: 1;
 }
 .fullcontact{
+  padding-left: 15px;
+  padding-top: 15px;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -385,4 +389,7 @@ a:active {
 }
 .experience{
   margin: auto;
+}
+.worktitle{
+  padding-left: 15px;
 }
