--- a/css/style.production.css
+++ b/css/style.production.css
@@ -121,7 +121,7 @@ a:active {
 .profile__portrait {
   float: left;
   width: 250px;
-  margin-right: 40px;
+  margin-right: 10px;
   border-radius: 50%;
   padding-top: 15px;
 }
@@ -142,8 +142,8 @@ a:active {
 .profile {
   max-width: 700px;
   margin: 0 auto;
+  width: 500px;
 }
-
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
