--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ a:active {
 .profile__portrait {
   float: left;
   width: 250px;
-  margin-right: 40px;
+  margin-right: 10px;
   border-radius: 50%;
   padding-top: 15px;
 }
@@ -128,6 +128,7 @@ a:active {
 .profile {
   max-width: 700px;
   margin: 0 auto;
+  width: 500px;
 }
 
 * {
