--- a/css/styles.css
+++ b/css/styles.css
@@ -157,38 +157,41 @@ a:active {
 
 .navigation-list li {
   display: inline-block;
+  text-align: left;
+
   margin-left: 15px;
 }
 
+/* work page start */
+
 /* start grid fallback */
+main{
+  padding: 0px 20px;
+}
 .grid__item {
   display: inline-block;
   width: 33%;
-  padding-left: 15px;
 }
-
+.porfolio__grid__item img{
+width: 100%;
+}
 /* end grid fallback */
-
 @supports (display: grid) {
-  .grid {
-    display: grid;
-
-    /* grid-template-columns: 300px 300px 300px; fractions are better than pixels - they are responsive */
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
-    margin: 0;
+  .work__content--grid{
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 20px;
   }
-
-  .grid__item {
-    background-color: lightgray;
-    width: auto;
-    min-height: auto;
-    margin: 0;
+  .porfolio__grid__item{
+      background-color: #f3f3f3;
+      padding: 15px;
+      width: auto;
+      min-height: auto;
+      margin: 0;
   }
-
-  .grid__item:last-child {
-    grid-column: 3 / 3;
-    grid-row: 1 / 3;
+  .porfolio__grid__item:last-child {
+      grid-column: 3 / 3;
+      grid-row: 1 / 3;
   }
 }
 
@@ -271,7 +274,7 @@ a:active {
   max-width: 750px;
   margin: 0 auto;
   flex-direction: column;
-  text-align: left;
+  text-align: center;
 }
 
 .about-myself {
