--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --light-yellow: #fcffad;
   --mostly-orange: #f76414;
   --navcolora: #00675c;
+  --peach: 	#858585;
 }
 
 /*
@@ -37,7 +38,7 @@ button {
   font-family: inherit;
 
   /* styles the background color, font color, and text decoration (underline, etc.) of the button */
-  background-color: var(--primary-color);
+  background-color: var(--peach);
   color: white;
   text-decoration: none;
 
@@ -118,15 +119,19 @@ a:active {
 }
 
 .page-footer {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  height: 2.5rem;
   clear: both;
   display: flex;
   flex-direction: column;
   text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
+
+
 footer .social-media > a {
   text-decoration: none;
 }
@@ -286,6 +291,7 @@ width: 100%;
 
 .about-myself {
   list-style-type: none;
+  color: var(--peach);
 }
 .fullpage{
   position: relative;
