--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,10 @@ width: 100%;
       min-height: auto;
       margin: 0;
   }
+  .porfolio__grid__item:nth-last-child(2) {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+  }
   .porfolio__grid__item:last-child {
       grid-column: 3 / 3;
       grid-row: 1 / 3;
